--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">O meu mundo interior cria o meu mundo exterior, eu tenho uma mente milionaria</div>
+	<div class="alert">teste</div>
 	
 	<div class="container">
 		<div class="logo">
