--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">teste</div>
+	<div class="alert">testedevops</div>
 	
 	<div class="container">
 		<div class="logo">
